--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,21 +13,23 @@
   }
   
 .wrapper .search-input{
-    background: #fff;
+    background: #ffffff;
     width: 100%;
+    height: auto;
     border-radius: 50px;
     position: relative;
-    box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
+    /* box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12); */
   }
   .search-input input{
-    height: 55px;
+    height: auto;
     width: 100%;
     outline: none;
     border: none;
     border-radius: 50px;
-    padding: 0 60px 0 20px;
+    /* padding: 0 60px 0 20px; */
     font-size: 18px;
-    box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+    /* box-shadow: 0px 1px 5px rgba(0,0,0,0.1); */
+    padding: 25px;
   }
   
  
@@ -46,7 +48,43 @@
     border: none;
   }
   
-::selection{
-    color: #fff;
+
+ 
+ .delete-box{
+    background: #fff;
+    width: 350px;
+    position: relative;
+    margin-top: 25px;
+    margin-left: 40px;
+    list-style: none;
+    margin-bottom: 115px;
+ } 
+ .todo-list{
+    display: flex;
+    position: relative;
+    margin-bottom: 15px;
+ }
+ .desc{
+    flex: 0.7;
+    overflow: scroll;
+    scrollbar-width: none;
+ }
+ .desc::-webkit-scrollbar {
+    display: none;
   }
-  
+ 
+ .delete-btn{
+    flex: 0.3;
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    right: 0;
+ }
+
+ .remove{
+   margin-top: 0;
+   background-color: transparent;
+   position: absolute;
+   right: 0;
+ }
+ 
