--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -4,12 +4,14 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+   
   }
   
 .wrapper{
    
     max-width: 450px;
     margin: 150px auto;
+    
   }
   
 .wrapper .search-input{
@@ -18,7 +20,7 @@
     height: auto;
     border-radius: 50px;
     position: relative;
-    box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
+    /* box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12); */
   }
   .search-input input{
     height: auto;
@@ -28,15 +30,16 @@
     border-radius: 50px;
     padding: 0 60px 0 20px;
     font-size: 18px;
-    box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+    box-shadow: 10px 1px 80px rgba(9, 0, 0, 0.1);
     padding: 25px;
+    position: relative;
   }
   
  
   .search-input .icon{
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 10px;
+    top: 10px;
     height: 55px;
     width: 55px;
     text-align: center;
@@ -52,10 +55,10 @@
  
  .delete-box{
     background: #fff;
-    width: 350px;
+    width: 390px;
     position: relative;
     margin-top: 25px;
-    margin-left: 40px;
+    margin-left: 30px;
     list-style: none;
     margin-bottom: 115px;
  } 
@@ -63,11 +66,18 @@
     display: flex;
     position: relative;
     margin-bottom: 15px;
+    width: 383px;
+  
+   
+   
  }
  .desc{
     flex: 0.7;
+    font-size: 18px;
     overflow: scroll;
     scrollbar-width: none;
+    height: 25px;
+    
  }
  .desc::-webkit-scrollbar {
     display: none;
@@ -82,11 +92,37 @@
  }
 
  .remove{
-   margin-top: 0;
+   margin-top: 5px;
    background-color: transparent;
    position: absolute;
+
    right: 0;
  }
+.edit{ 
+    margin-top: 2px;
+    background-color: transparent;
+    position: absolute;
+ 
+    right: 40px;
+border: none;
+ }
+ .poppups{
+  width:300px;
+    height:350px;
+    background: linear-gradient(to top,rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
+    position: absolute;
+    top: 230px;
+    left: 600px;
+    border-radius: 10px;
+    padding: 25px;
+    display:grid;
+}
+  .poppups span{
+  color: #fff;
+  margin-left: 90px;
+ }
+ 
+ 
  
 
 
