--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -18,7 +18,7 @@ box-shadow: 10px 1px 80px rgba(9, 0, 0, 0.1);
 
   }
   .usename{
-    background-color: rgb(199, 76, 72);
+    background-color:  #ff7200;
     height: 100%;
   }
   .username1{
@@ -52,16 +52,16 @@ padding: auto;
   /* animation */
   .login-button {
    
-    background: red;
-    animation: mymove 3s infinite;
+    background: #ff7200;
+    animation: mymove 6s infinite;
   }
   
   @keyframes mymove {
-    from {background-color: red;}
-    to {background-color: blue;}
+    from {background-color: rgba(9, 0, 0, 0.1);}
+    to {background-color: #ff7200;}
   }
   .loglink{
-    background-color: rgb(199, 76, 72);
+    background-color:  #ff7200;
     height: 100%;
   
   }
